--- a/Bolt/Info.plist
+++ b/Bolt/Info.plist
@@ -37,6 +37,11 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>Required device capabilities</key>
 	<array>
 		<string>arm64</string>
