--- a/BuildConfigurations/Bolt.xcconfig
+++ b/BuildConfigurations/Bolt.xcconfig
@@ -1,5 +1,6 @@
 
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
+ASSETCATALOG_COMPILER_APPICON_NAME[sdk=macosx*] = AppIcon_macOS
 CURRENT_PROJECT_VERSION = 1
 INFOPLIST_FILE = Bolt/Info.plist
 IPHONEOS_DEPLOYMENT_TARGET = 16.0
