--- a/BuildConfigurations/Bolt.xcconfig
+++ b/BuildConfigurations/Bolt.xcconfig
@@ -11,4 +11,5 @@ PRODUCT_NAME = $(TARGET_NAME)
 SUPPORTED_PLATFORMS = iphoneos iphonesimulator
 SUPPORTS_MACCATALYST = YES
 SUPPORTS_MAC_DESIGNED_FOR_IPHONE_IPAD = NO
+SUPPORTS_XR_DESIGNED_FOR_IPHONE_IPAD = NO
 TARGETED_DEVICE_FAMILY = 1,2
