Simplify build configuration files.

--- a/BuildConfigurations/Bolt.xcconfig
+++ b/BuildConfigurations/Bolt.xcconfig
@@ -1,15 +1,9 @@
 
+#include "./SDK-iOS.xcconfig"
+
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
 ASSETCATALOG_COMPILER_APPICON_NAME[sdk=macosx*] = AppIcon_macOS
 CURRENT_PROJECT_VERSION = 1
 INFOPLIST_FILE = Bolt/Info.plist
-IPHONEOS_DEPLOYMENT_TARGET = 16.0
-IPHONEOS_DEPLOYMENT_TARGET[sdk=macosx*] = 17.0
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks
 MARKETING_VERSION = 0.1.0
-PRODUCT_NAME = $(TARGET_NAME)
-SUPPORTED_PLATFORMS = iphoneos iphonesimulator
-SUPPORTS_MACCATALYST = YES
-SUPPORTS_MAC_DESIGNED_FOR_IPHONE_IPAD = NO
-SUPPORTS_XR_DESIGNED_FOR_IPHONE_IPAD = NO
-TARGETED_DEVICE_FAMILY = 1,2
