--- a/BuildConfigurations/Project-Debug.xcconfig
+++ b/BuildConfigurations/Project-Debug.xcconfig
@@ -1,5 +1,6 @@
 #include "./Project.xcconfig"
 
+CODE_SIGN_STYLE = Automatic
 DEBUG_INFORMATION_FORMAT = dwarf
 ENABLE_TESTABILITY = YES
 GCC_DYNAMIC_NO_PIC = NO
