--- a/BuildConfigurations/Project-Release.xcconfig
+++ b/BuildConfigurations/Project-Release.xcconfig
@@ -1,5 +1,6 @@
 #include "./Project.xcconfig"
 
+CODE_SIGN_STYLE = Manual
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 ENABLE_NS_ASSERTIONS = NO
 MTL_ENABLE_DEBUG_INFO = NO
