--- a/BuildConfigurations/Project.xcconfig
+++ b/BuildConfigurations/Project.xcconfig
@@ -44,8 +44,10 @@ GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE
 GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 IPHONEOS_DEPLOYMENT_TARGET = 16.0
+IPHONEOS_DEPLOYMENT_TARGET[sdk=macosx*] = 17.0
 MACOSX_DEPLOYMENT_TARGET = 14.0
 MTL_FAST_MATH = YES
 OTHER_SWIFT_FLAGS =
-SDKROOT = iphoneos
+PRODUCT_BUNDLE_IDENTIFIER = $(ORGANIZATION_IDENTIFIER).$(PRODUCT_NAME)
+PRODUCT_NAME = $(TARGET_NAME)
 SWIFT_VERSION = 5.0
