--- a/BuildConfigurations/App.xcconfig
+++ b/BuildConfigurations/App.xcconfig
@@ -2,4 +2,5 @@
 
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
 ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME =
+ENABLE_PREVIEWS = YES
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks
