--- a/BuildConfigurations/Project.xcconfig
+++ b/BuildConfigurations/Project.xcconfig
@@ -4,8 +4,7 @@ ALWAYS_SEARCH_USER_PATHS = NO
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CLANG_ANALYZER_NONNULL = YES
 CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION = YES_AGGRESSIVE
-CLANG_CXX_LANGUAGE_STANDARD = gnu++14
-CLANG_CXX_LIBRARY = libc++
+CLANG_CXX_LANGUAGE_STANDARD = gnu++20
 CLANG_ENABLE_MODULES = YES
 CLANG_ENABLE_OBJC_ARC = YES
 CLANG_ENABLE_OBJC_WEAK = YES
@@ -32,9 +31,11 @@ CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
 CLANG_WARN_UNREACHABLE_CODE = YES
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 COPY_PHASE_STRIP = NO
+DEAD_CODE_STRIPPING = NO
+DEAD_CODE_STRIPPING[sdk=macosx*] = YES
 ENABLE_BITCODE = NO
 ENABLE_STRICT_OBJC_MSGSEND = YES
-GCC_C_LANGUAGE_STANDARD = gnu11
+GCC_C_LANGUAGE_STANDARD = gnu17
 GCC_NO_COMMON_BLOCKS = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_ABOUT_RETURN_TYPE = YES_ERROR
@@ -44,6 +45,7 @@ GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 IPHONEOS_DEPLOYMENT_TARGET = 16.0
 IPHONEOS_DEPLOYMENT_TARGET[sdk=macosx*] = 17.0
+LOCALIZATION_PREFERS_STRING_CATALOGS = YES
 MACOSX_DEPLOYMENT_TARGET = 14.0
 MTL_FAST_MATH = YES
 OTHER_SWIFT_FLAGS =
