Dead code stripping should be enabled on iOS instead of macOS.

--- a/BuildConfigurations/Project.xcconfig
+++ b/BuildConfigurations/Project.xcconfig
@@ -31,8 +31,8 @@ CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
 CLANG_WARN_UNREACHABLE_CODE = YES
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 COPY_PHASE_STRIP = NO
-DEAD_CODE_STRIPPING = NO
-DEAD_CODE_STRIPPING[sdk=macosx*] = YES
+DEAD_CODE_STRIPPING = YES
+DEAD_CODE_STRIPPING[sdk=macosx*] = NO
 ENABLE_BITCODE = NO
 ENABLE_STRICT_OBJC_MSGSEND = YES
 GCC_C_LANGUAGE_STANDARD = gnu17
