Implement the editing functionality for HomeViewController.

--- a/.swiftlint_base.yml
+++ b/.swiftlint_base.yml
@@ -16,6 +16,7 @@ disabled_rules:
   - orphaned_doc_comment
   - redundant_discardable_let
   - todo
+  - type_body_length
   - type_name
 
 opt_in_rules:
