--- a/BuildConfigurations/Project.xcconfig
+++ b/BuildConfigurations/Project.xcconfig
@@ -45,6 +45,7 @@ GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 IPHONEOS_DEPLOYMENT_TARGET = 18.0
 IPHONEOS_DEPLOYMENT_TARGET[sdk=macosx*] = 18.0
+LOCALIZATION_EXPORT_SUPPORTED = NO
 LOCALIZATION_PREFERS_STRING_CATALOGS = YES
 MACOSX_DEPLOYMENT_TARGET = 15.0
 MTL_FAST_MATH = YES
