Fix slow SwiftLint runs caused by glob resolution against excluded patterns.

--- a/.swiftlint_base.yml
+++ b/.swiftlint_base.yml
@@ -119,8 +119,7 @@ analyzer_rules:
   - unused_import
 
 excluded:
-  - "**/legacy/*.swift"
-  - "**/.build/**"
+  - "**/.build/"
 
 indentation: 2
 
