--- a/BuildConfigurations/Bolt-Debug.xcconfig
+++ b/BuildConfigurations/Bolt-Debug.xcconfig
@@ -1,6 +1,6 @@
 #include "./Bolt.xcconfig"
 
-ASSETCATALOG_COMPILER_APPICON_NAME[sdk=iphone*] = AppIcon_Development
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon_Development
 CODE_SIGN_ENTITLEMENTS = Bolt/BoltDebug.entitlements
 PRODUCT_BUNDLE_IDENTIFIER = $(ORGANIZATION_IDENTIFIER).BoltOSSDebug
 PRODUCT_DISPLAY_NAME = BoltDebug
