Update bundle identifiers to use .debug suffix

--- a/BuildConfigurations/Bolt-Debug.xcconfig
+++ b/BuildConfigurations/Bolt-Debug.xcconfig
@@ -2,5 +2,5 @@
 
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon_Development
 CODE_SIGN_ENTITLEMENTS = Bolt/BoltDebug.entitlements
-PRODUCT_BUNDLE_IDENTIFIER = $(ORGANIZATION_IDENTIFIER).BoltOSSDebug
+PRODUCT_BUNDLE_IDENTIFIER = $(ORGANIZATION_IDENTIFIER).BoltOSS.debug
 PRODUCT_DISPLAY_NAME = BoltDebug
