--- a/BuildConfigurations/Bolt.xcconfig
+++ b/BuildConfigurations/Bolt.xcconfig
@@ -3,4 +3,5 @@
 
 CURRENT_PROJECT_VERSION = 1
 INFOPLIST_FILE = Bolt/Info.plist
+INFOPLIST_FILE[sdk=macosx*] = Bolt/Info_catalyst.plist
 MARKETING_VERSION = 0.1.0
